Rewrite README with hackathon context and links to reported issues